--- a/styles/chat-style.sass
+++ b/styles/chat-style.sass
@@ -6,7 +6,7 @@ a
 .chat-wrap
   background: #292929
   color: white
-  height: 100vh
+  min-height: 100vh
   font-size: 14px
   font-family: "PT Sans", sans-serif
 
@@ -16,8 +16,9 @@ h2
   font-weight: bold
   margin-bottom: 40px
 
-button, input
+button, input, textarea
   outline: none
 
 a, button
   cursor: pointer
+  border: none
