--- a/src/assets/scss/mixins/mixins/_placeholder.scss
+++ b/src/assets/scss/mixins/mixins/_placeholder.scss
@@ -13,9 +13,20 @@
 //   }
 
 @mixin placeholder {
-	&::-webkit-input-placeholder {@content}
-	&::-moz-placeholder {opacity: 1; @content}
-	&:-moz-placeholder {@content}
-	&:-ms-input-placeholder {@content}
-	&.placeholder {@content}
+  &::-webkit-input-placeholder {
+    @content
+  }
+  &::-moz-placeholder {
+    opacity: 1;
+    @content
+  }
+  &:-moz-placeholder {
+    @content
+  }
+  &:-ms-input-placeholder {
+    @content
+  }
+  &.placeholder {
+    @content
+  }
 }
