--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,6 +1,6 @@
-$font-stack: 16px/1 BlinkMacSystemFont, -apple-system, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+$main-font: 16px/1 BlinkMacSystemFont, -apple-system, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
 
-@mixin main-page {
+@mixin page-size {
   height: 100%;
   margin: 0;
   padding: 0;
@@ -8,14 +8,14 @@ $font-stack: 16px/1 BlinkMacSystemFont, -apple-system, "Segoe UI", Roboto, Helve
 }
 
 html {
-  @include main-page;
+  @include page-size;
   background: #fff;
   overflow: hidden;
 
   body {
-    @include main-page;
+    @include page-size;
     color: #444;
-    font: $font-stack;
+    font: $main-font;
     overflow: auto;
 
     a {
